added authom, connect-mongo, session stuff and more

--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,8 @@
          <p>Technology Director at TBWA\Toronto, idea factory, adventure racer, eco focused veggie animal lover, atheist, moralistic & sarcastic individual </p>
          <p>
             <a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+         <div><a href='/auth/google'>Who am I on Google?</a></div>
+
       </div>
 
       <!-- Example row of columns -->
